{"message":"Update file: navigation.yml","fileName":"navigation.yml","userId":"574"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,8 +2,8 @@ logo: /images/logo_large.png
 links:
   - title: Canberra
     collection: canberra
-  - title: Discover Canberra
-    collection: discover-canberra
+  - title: Special Programmes
+    collection: special-programmes
   - title: Partners of Canberra
     collection: partners-of-canberra
   - title: Current Students
