{"message":"Update file: navigation.yml","fileName":"navigation.yml","userId":"574"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,5 +6,5 @@ links:
     collection: special-programmes
   - title: Partners of Canberra
     collection: partners-of-canberra
-  - title: Current Students
-    collection: students
+  - title: Useful Links
+    collection: useful-links
