{"message":"Update file: navigation.yml","fileName":"navigation.yml","userId":"574"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@ links:
     collection: canberra
   - title: Special Programmes
     collection: special-programmes
-  - title: Partners of Canberra
-    collection: partners-of-canberra
+  - title: CCA
+    collection: cca
   - title: Useful Links
     collection: useful-links
