--- a/_special-programmes/collection.yml
+++ b/_special-programmes/collection.yml
@@ -2,6 +2,7 @@ collections:
   special-programmes:
     output: true
     order:
+      - Personal Learning Device.md
       - Cyberwellness Guides.md
       - Applied Learning (ALP).md
       - Learning for Life (LLP).md
