{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"574"}

--- a/_special-programmes/collection.yml
+++ b/_special-programmes/collection.yml
@@ -5,6 +5,6 @@ collections:
       - Applied Learning (ALP).md
       - Learning for Life (LLP).md
       - Student Leadership & Recognition.md
-      - Personal Learning Device.md
+      - Personal Learning Device & Policy.md
       - Cyberwellness Guides.md
       - Our Curriculum.md
