--- a/_special-programmes/collection.yml
+++ b/_special-programmes/collection.yml
@@ -2,6 +2,7 @@ collections:
   special-programmes:
     output: true
     order:
+      - Guide to SLS Account Management.md
       - Student Suggestion Scheme (3S).md
       - Applied Learning (ALP).md
       - Learning for Life (LLP).md
