--- a/_useful-links/collection.yml
+++ b/_useful-links/collection.yml
@@ -2,6 +2,7 @@ collections:
   useful-links:
     output: true
     order:
+      - Leave Of Absence (LOA).md
       - 2024 Booklist & Uniform Order Form.md
       - Class Allocation.md
       - Library Online Public Access Catalogue (OPAC).md
