--- a/_useful-links/collection.yml
+++ b/_useful-links/collection.yml
@@ -2,6 +2,7 @@ collections:
   useful-links:
     output: true
     order:
+      - Direct School Admission (DSA) 2024.md
       - Frequently Asked Questions.md
       - Leave Of Absence (LOA).md
       - 2024 Booklist & Uniform Order Form.md
