--- a/_cca/collection.yml
+++ b/_cca/collection.yml
@@ -2,6 +2,7 @@ collections:
   cca:
     output: true
     order:
+      - CCA Achievements.md
       - Our Co Curriculum.md
       - Sports/Shooting (Air Pistol) (NEW!).md
       - Sports/Taekwondo (NEW!).md
