--- a/_useful-links/collection.yml
+++ b/_useful-links/collection.yml
@@ -6,5 +6,5 @@ collections:
       - Class Allocation.md
       - Library Online Public Access Catalogue (OPAC).md
       - Leave Of Absence (LOA).md
-      - Direct School Admission (DSA) 2024.md
+      - Direct School Admission (DSA).md
       - Frequently Asked Questions.md
