{"message":"Update file: navigation.yml","fileName":"navigation.yml","userId":"574"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,5 +6,7 @@ links:
     collection: special-programmes
   - title: CCA
     collection: cca
+  - title: Our Partners
+    collection: partners-of-canberra
   - title: Useful Links
     collection: useful-links
