{"message":"Update file: navigation.yml","fileName":"navigation.yml","userId":"574"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,6 +7,6 @@ links:
   - title: CCA
     collection: cca
   - title: Our Partners
-    collection: partners-of-canberra
+    collection: our-partners
   - title: Useful Links
     collection: useful-links
