{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"574"}

--- a/_canberra/collection.yml
+++ b/_canberra/collection.yml
@@ -2,7 +2,7 @@ collections:
   canberra:
     output: true
     order:
-      - Principal's Foreword.md
+      - Principal's Message & School Philosophy.md
       - Canberra at a Glance/.keep
       - Canberra at a Glance/School Song.md
       - Canberra at a Glance/School Logo.md
