--- a/_canberra/collection.yml
+++ b/_canberra/collection.yml
@@ -2,6 +2,7 @@ collections:
   canberra:
     output: true
     order:
+      - Mission and Vision.md
       - Principal's Message & School Philosophy.md
       - Canberra at a Glance/.keep
       - Canberra at a Glance/School Song.md
