{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"574"}

--- a/_canberra/collection.yml
+++ b/_canberra/collection.yml
@@ -3,7 +3,7 @@ collections:
     output: true
     order:
       - Principal's Message & School Philosophy.md
-      - Mission and Vision.md
+      - Vision, Mission & Motto.md
       - Canberra at a Glance/.keep
       - Canberra at a Glance/School Song.md
       - Canberra at a Glance/School Logo.md
