{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"574"}

--- a/_canberra/collection.yml
+++ b/_canberra/collection.yml
@@ -2,6 +2,7 @@ collections:
   canberra:
     output: true
     order:
+      - School Logo.md
       - Principal's Message & School Philosophy.md
       - Vision, Mission & Motto.md
       - Canberra at a Glance/.keep
