--- a/_canberra/collection.yml
+++ b/_canberra/collection.yml
@@ -4,7 +4,7 @@ collections:
     order:
       - Principal's Message & School Philosophy.md
       - Vision, Mission & Motto.md
-      - School Crest & School Logo.md
+      - School Crest & School Song.md
       - School Advisory Committee.md
       - Our Staff.md
       - School Publications & Open House 2023.md
