--- a/_useful-links/collection.yml
+++ b/_useful-links/collection.yml
@@ -2,6 +2,7 @@ collections:
   useful-links:
     output: true
     order:
+      - 2024 Secondary One Registration.md
       - School Canteen.md
       - 2024 Booklist & Uniform Order Form.md
       - Class Allocation.md
