{"message":"Update file: collection.yml","userId":"574","fileName":"collection.yml"}

--- a/_cca/collection.yml
+++ b/_cca/collection.yml
@@ -12,7 +12,7 @@ collections:
       - Uniformed Groups/.keep
       - Uniformed Groups/Boy's Brigade.md
       - Uniformed Groups/Girls' Brigade.md
-      - Uniformed Groups/National Cadet Corps (SEA).md
+      - Uniformed Groups/National Cadet Corps (AIR).md
       - Uniformed Groups/National Police Cadet Corp (NPCC).md
       - Uniformed Groups/National Civil Defence Cadet Corps (NCDCC).md
       - Visual and Performing Arts/.keep
