--- a/_useful-links/collection.yml
+++ b/_useful-links/collection.yml
@@ -2,7 +2,7 @@ collections:
   useful-links:
     output: true
     order:
-      - Class & Exam Timetable.md
+      - 2024 Class & Exam Timetable.md
       - 2024 Secondary One Registration.md
       - School Canteen.md
       - 2024 Booklist & Uniform Order Form.md
