--- a/_cca/collection.yml
+++ b/_cca/collection.yml
@@ -13,7 +13,7 @@ collections:
       - Uniformed Groups/Boys' Brigade.md
       - Uniformed Groups/Girls' Brigade.md
       - Uniformed Groups/National Cadet Corps (AIR).md
-      - Uniformed Groups/National Police Cadet Corp (NPCC).md
+      - Uniformed Groups/National Police Cadet Corps (NPCC).md
       - Uniformed Groups/National Civil Defence Cadet Corps (NCDCC).md
       - Visual and Performing Arts/.keep
       - Visual and Performing Arts/Guitar Ensemble (NEW!).md
