--- a/_the-canberran-experience/collection.yml
+++ b/_the-canberran-experience/collection.yml
@@ -11,6 +11,7 @@ collections:
       - Enrichment Programmes.md
       - Overseas Learning Journey/.keep
       - "Overseas Learning Journey/Global Canberran Programme 2024: Cambodia.md"
+      - Graduation Ceremony/Graduation Assembly 2023.md
       - Graduation Ceremony/Graduation Night 2023.md
       - Graduation Ceremony/.keep
       - Academic Achievement.md
