--- a/_our-partners/collection.yml
+++ b/_our-partners/collection.yml
@@ -2,6 +2,7 @@ collections:
   our-partners:
     output: true
     order:
+      - For Partners/International Partners.md
       - For Partners/.keep
       - For Parents/.keep
       - For Parents/Parent Support Group.md
