{"message":"Update file: collection.yml","userId":"574","fileName":"collection.yml"}

--- a/_our-partners/collection.yml
+++ b/_our-partners/collection.yml
@@ -2,6 +2,7 @@ collections:
   our-partners:
     output: true
     order:
+      - For Partners/Self Help Groups.md
       - For Partners/International Partners.md
       - For Partners/.keep
       - For Parents/.keep
