--- a/_our-partners/collection.yml
+++ b/_our-partners/collection.yml
@@ -2,6 +2,7 @@ collections:
   our-partners:
     output: true
     order:
+      - For Partners/Local Partners.md
       - For Partners/Self Help Groups.md
       - For Partners/International Partners.md
       - For Partners/.keep
