{"message":"Update file: collection.yml","userId":"574","fileName":"collection.yml"}

--- a/_our-partners/collection.yml
+++ b/_our-partners/collection.yml
@@ -16,7 +16,7 @@ collections:
       - For Parents/Personal Accident Insurance for Students.md
       - For Parents/MOE Assistance Scheme.md
       - For Alumni/.keep
-      - For Alumni/Canberran Alumni.md
+      - For Alumni/Canberra Secondary School Alumni.md
       - Useful Links/.keep
       - Useful Links/2024 Class & Exam Timetable.md
       - Useful Links/2024 Booklist & Uniform Order Form.md
