--- a/_about-canberra/collection.yml
+++ b/_about-canberra/collection.yml
@@ -3,6 +3,7 @@ collections:
     output: true
     order:
       - Principal's Message & School Philosophy.md
+      - Vision, Mission & Values/School Rules.md
       - Vision, Mission & Values/.keep
       - Vision, Mission & Values/Vision, Mission, Values & Motto.md
       - Vision, Mission & Values/School Crest & School Song.md
