--- a/_ccas/collection.yml
+++ b/_ccas/collection.yml
@@ -23,6 +23,7 @@ collections:
       - Visual and Performing Arts/Dance Club.md
       - Visual and Performing Arts/Guitar Ensemble (NEW!).md
       - Visual and Performing Arts/Guzheng Ensemble.md
+      - Clubs/Library.md
       - Clubs/.keep
       - Clubs/Robotics.md
       - Clubs/AVA Club.md
