{"message":"Update file: collection.yml","userId":"574","fileName":"collection.yml"}

--- a/_ccas/collection.yml
+++ b/_ccas/collection.yml
@@ -25,7 +25,7 @@ collections:
       - Visual and Performing Arts/Guzheng Ensemble.md
       - Clubs/.keep
       - Clubs/Robotics.md
-      - Clubs/Library.md
+      - Clubs/Library Club.md
       - Clubs/AVA Club.md
       - Clubs/Ecostewardship.md
       - CCA Schedule.md
