{"message":"Update file: collection.yml","userId":"3682","fileName":"collection.yml"}

--- a/_the-canberran-heartbeat/collection.yml
+++ b/_the-canberran-heartbeat/collection.yml
@@ -18,5 +18,5 @@ collections:
       - Student Advocacy/.keep
       - Student Advocacy/Student Recognition.md
       - Student Advocacy/The Canberra Spotlight (TCS).md
-      - Student Advocacy/Student Suggestion Scheme (3S).md
+      - Student Advocacy/Student Suggestion Scheme (SSS).md
       - Peer Support Leaders.md
