--- a/_about-canberra/collection.yml
+++ b/_about-canberra/collection.yml
@@ -12,6 +12,7 @@ collections:
       - School Publication/School Publications 2024.md
       - School Publication/.keep
       - School Publication/School Publications 2023.md
+      - School Events/Hosting of Haikou No 1 Middle School.md
       - School Events/Racial Harmony Day 2024.md
       - School Events/SAF Central Band Outreach Programme.md
       - School Events/Digital Fabrication Space (DFS) x Artist 2024.md
