{"message":"Update file: collection.yml","userId":"574","fileName":"collection.yml"}

--- a/_the-canberran-heartbeat/collection.yml
+++ b/_the-canberran-heartbeat/collection.yml
@@ -12,7 +12,7 @@ collections:
       - Outdoor Adventure Learning/Sec 1 OAL Camp.md
       - Outdoor Adventure Learning/Sec 3 OAL Camp.md
       - Academic Excellence Programme/.keep
-      - Academic Excellence Programme/Aspirations Week.md
+      - Academic Excellence Programme/Motivation & Study Skills Workshop.md
       - Academic Excellence Programme/Early Admissions Exercise Programme
         (EAE).md
       - Student Advocacy/.keep
